--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,6 +1,10 @@
 .footer {
-  min-height: 30px;
+  min-height: 70px;
   background-color: $dark-color;
+
+  @media (min-width: $desktop-width) {
+    min-height: 30px;
+  }
 }
 
 .footer__container {
@@ -8,7 +12,7 @@
   padding: 5px 15px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
 
   @media (min-width: $tablet-width) {
@@ -17,19 +21,29 @@
 
   @media (min-width: $desktop-width) {
     width: $desktop-width;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 
 .footer__copyright,
 .footer__creator,
 .footer__link {
-  font-size: 14px;
+  font-size: 11px;
   color: $light-color;
-  margin-right: 20px;
+
+  @media (min-width: $desktop-width) {
+    font-size: 14px;
+    margin-right: 20px;
+  }
 }
 
 .footer__copyright {
-  margin-right: auto;
+  margin: 2px 0 6px;;
+
+  @media (min-width: $desktop-width) {
+    margin-right: auto;
+  }
 }
 
 .footer__link {
