--- a/sass/form.scss
+++ b/sass/form.scss
@@ -1,36 +1,60 @@
 .form {
   display: flex;
   flex-direction: column;
-  width: 555px;
-  padding-top: 39px;
-  margin-bottom: 45px;
+  width: 290px;
+  margin-bottom: 38px;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 45px;
+    width: 555px;
+    padding: 39px 15px 0;
+  }
 }
 
 .form__input {
-  height: 53px;
-  padding-left: 20px;
+  height: 43px;
+  padding-left: 15px;
+  margin-bottom: 7px;
   color: $light-color;
   background-color: transparent;
   border: 1px solid transparent;
   border-bottom: 1px solid $light-color;
-  font-size: 18px;
-  line-height: 60px;
+  font-size: 12px;
   outline: none;
 
   &--phone {
-    width: 263px;
+    width: 175px;
+
+    @media (min-width: $desktop-width) {
+      width: 263px;
+    }
   }
 
   &:focus {
-    font-size: 24px;
+    font-size: 14px;
     font-weight: 300;
+
+    @media (min-width: $desktop-width) {
+      font-size: 20px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 53px;
+    padding-left: 20px;
+    font-size: 18px;
   }
 }
 
 .form__label {
-  padding-left: 20px;
+  padding-left: 15px;
   color: transparent;
-  font-size: 14px;
+  font-size: 12px;
+
+  @media (min-width: $desktop-width) {
+    font-size: 14px;
+    padding-left: 20px;
+  }
 }
 
 .form__input:focus +  .form__label {
@@ -38,19 +62,31 @@
 }
 
 .form__textarea {
-  margin-top: 30px;
-  padding-left: 20px;
+  margin-top: 20px;
+  padding-left: 15px;
+  margin-bottom: 7px;
   color: $light-color;
   background-color: #101010;
   border: 1px solid transparent;
   border-bottom: 1px solid $light-color;
-  font-size: 18px;
-  line-height: 40px;
+  font-size: 12px;
+  line-height: 18px;
   outline: none;
 
   &:focus {
-    font-size: 24px;
+    font-size: 14px;
     font-weight: 300;
+
+    @media (min-width: $desktop-width) {
+      font-size: 20px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 30px;
+    padding-left: 20px;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
 
@@ -63,16 +99,17 @@
 }
 
 .form__btn {
-  align-self: flex-start;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  align-self: center;
+  margin-top: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   text-align: center;
-  width: 265px;
-  min-height: 70px;
-  font-size: 24px;
+  width: 177px;
+  min-height: 40px;
+  font-size: 16px;
   color: $light-color;
-  font-weight: 700;
-  letter-spacing: 0.6px;
+  font-weight: 400;
+  letter-spacing: 0.3px;
   border: 2px solid $light-color;
   background-color: transparent;
 
@@ -83,5 +120,15 @@
 
   &:active {
     opacity: 0.6;
+  }
+
+  @media (min-width: $desktop-width) {
+    align-self: flex-start;
+    width: 265px;
+    min-height: 70px;
+    font-size: 24px;
+    color: $light-color;
+    font-weight: 700;
+    letter-spacing: 0.6px;
   }
 }
