--- a/sass/ideas.scss
+++ b/sass/ideas.scss
@@ -9,12 +9,9 @@
 
 .ideas__container {
   width: $panel-width;
-  height: 510px;
-  padding-left: 15px;
-  padding-right: 15px;
+  height: 495px;
   margin: 0 auto;
-  padding-top: 120px;
-  padding-bottom: 50px;
+  padding: 120px 15px 50px 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +19,7 @@
 
   @media (min-width: $desktop-width) {
     width: $desktop-width;
-    height: 585px;
+    height: 1120px;
     padding-top: 222px;
   }
 }
@@ -48,9 +45,9 @@
   @media (min-width: $desktop-width) {
     margin-bottom: 20px;
     margin-left: auto;
-    margin-right: 30px;
+    margin-right: 25px;
     width: 685px;
-    height: 580px;
+    height: 700px;
     text-align: right;
     display: flex;
     flex-direction: column;
@@ -59,6 +56,10 @@
     color: $light-color;
     overflow-y: scroll;
   }
+}
+
+.jspContainer {
+  height: 700px;
 }
 
 .ideas__author {
@@ -75,7 +76,7 @@
 }
 
 .ideas__text {
-  margin: 0 20px 40px;
+  margin: 0 20px 20px;
   font-size: 12px;
   line-height: 16px;
   font-weight: 700;
@@ -88,6 +89,7 @@
 
 .ideas__slide {
   display: none;
+  height: 230px;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -144,6 +146,7 @@
 
 .ideas__link {
   display: block;
+  margin-top: auto;
   padding-top: 12px;
   text-align: center;
   width: 212px;
