--- a/sass/stat.scss
+++ b/sass/stat.scss
@@ -4,18 +4,18 @@
   margin: 0;
   background-image: url('../images/bg_stat.jpg');
   background-repeat: no-repeat;
-  background-size: auto;
-  background-position: top;
+  background-size: cover;
+  background-position: left top;
 }
 
 .stat__list {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   width: $panel-width;
-  padding-left: 40px;
-  padding-right: 40px;
   margin: 0 auto;
+  padding-bottom: 27px;
 
   @media (min-width: $tablet-width) {
     width: $tablet-width;
@@ -23,16 +23,26 @@
 
   @media (min-width: $desktop-width) {
     width: $desktop-width;
+    padding-left: 40px;
+    padding-right: 40px;
+    flex-direction: row;
+    align-items: flex-start;
   }
 }
 
 .stat__item {
-  width: 205px;
-  padding-top: 40px;
+  width: 220px;
+  padding-top: 30px;
+  padding-bottom: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+
+  @media (min-width: $desktop-width) {
+    width: 205px;
+    padding-top: 40px;
+  }
 }
 
 .stat__value {
