--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,7 @@ Version: 1.0
 @import "about";
 @import "tasks";
 @import "partner";
+@import "jquery.jscrollpane";
 @import "ideas";
 @import "team";
 @import "stat";
