--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,14 @@ ul {
           justify-content: space-between; }
   @media (min-width: 1170px) {
     .header__top {
-      width: 1170px; } }
+      width: 1170px;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end; } }
 
 .header__panel {
   width: 320px;
@@ -527,7 +534,7 @@ ul {
   @media (min-width: 1170px) {
     .header__panel {
       width: 300px;
-      height: 60px;
+      height: 65px;
       -webkit-box-align: end;
           -ms-flex-align: end;
               align-items: flex-end; }
@@ -563,8 +570,8 @@ ul {
     display: none; }
   @media (min-width: 1170px) {
     .header__title {
-      margin-top: 78px;
-      margin-bottom: auto;
+      margin-top: 133px;
+      margin-bottom: 50px;
       font-size: 72px;
       line-height: 55px; } }
 
@@ -583,7 +590,7 @@ ul {
     display: none; }
   @media (min-width: 1170px) {
     .header__intro {
-      width: 920px;
+      width: 960px;
       min-height: 202px;
       font-size: 30px;
       line-height: 45px;
@@ -609,14 +616,10 @@ ul {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      min-height: 50px;
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
           -ms-flex-direction: row;
               flex-direction: row;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; } }
 
@@ -629,7 +632,9 @@ ul {
   @media (min-width: 1170px) {
     .menu-item {
       width: auto;
-      margin: 0 8px; }
+      margin: 0 8px;
+      line-height: 26px;
+      font-weight: 400; }
       .menu-item:last-child {
         margin-right: 0; } }
 
@@ -685,16 +690,15 @@ ul {
 
 .tasks {
   width: 100%;
-  margin-top: -80px;
-  min-height: 615px;
+  margin-top: 0;
+  min-height: 508px;
   background-image: url("../images/bg_content1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top left; }
   @media (min-width: 1170px) {
     .tasks {
-      min-height: 1023px;
-      margin-top: -125px;
+      min-height: 850px;
       background-size: auto; } }
 
 .tasks__container {
@@ -702,11 +706,11 @@ ul {
   padding-left: 23px;
   padding-right: 23px;
   margin: 0 auto;
-  padding-top: 124px; }
+  padding-top: 45px; }
   @media (min-width: 1170px) {
     .tasks__container {
       width: 1170px;
-      padding-top: 240px;
+      padding-top: 115px;
       padding-left: 15px;
       padding-right: 15px; } }
 
@@ -816,10 +820,15 @@ ul {
       font-size: 24px; } }
 
 .partner {
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  padding-bottom: 22px; }
+  @media (min-width: 1170px) {
+    .partner {
+      padding-bottom: 60px; } }
 
 .partner__title {
   margin: 0 auto;
+  padding-top: 35px;
   padding-bottom: 0;
   font-family: "RuslanDisplay", "Arial", sans-serif;
   font-size: 24px;
@@ -831,8 +840,8 @@ ul {
     .partner__title {
       font-size: 48px;
       line-height: 60px;
-      padding-top: 15px;
-      padding-bottom: 23px; } }
+      padding-top: 60px;
+      padding-bottom: 25px; } }
 
 .swiper-container--1 {
   width: 320px;
@@ -904,19 +913,75 @@ ul {
   right: 10px;
   background-image: url("../images/right-arrow.svg"); }
 
+/*
+ * CSS Styles that are needed by jScrollPane for it to operate correctly.
+ *
+ * Include this stylesheet in your site or copy and paste the styles below into your stylesheet - jScrollPane
+ * may not operate correctly without them.
+ */
+.jspContainer {
+  overflow: hidden;
+  position: relative; }
+
+.jspPane {
+  position: absolute; }
+
+.jspVerticalBar {
+  width: 0; }
+  @media (min-width: 1170px) {
+    .jspVerticalBar {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 10px;
+      height: 100%;
+      background: transparent; } }
+
+.jspHorizontalBar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background: #000; }
+
+.jspCap {
+  display: none; }
+
+.jspTrack {
+  width: 0; }
+  @media (min-width: 1170px) {
+    .jspTrack {
+      background: red;
+      position: relative;
+      width: 4px;
+      border-radius: 2px; } }
+
+.jspDrag {
+  width: 0; }
+  @media (min-width: 1170px) {
+    .jspDrag {
+      background: #fff;
+      position: relative;
+      top: 0;
+      left: -3px;
+      width: 10px;
+      border-radius: 5px;
+      cursor: pointer; } }
+
 .ideas {
   width: 100%;
-  margin-top: -35px;
+  margin: 0;
   background-image: url("../images/bg_content2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: top right; }
+  background-position: top; }
 
 .ideas__container {
   width: 320px;
-  height: 495px;
+  height: 406px;
   margin: 0 auto;
-  padding: 120px 15px 50px 15px;
+  padding: 60px 15px 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -931,8 +996,12 @@ ul {
   @media (min-width: 1170px) {
     .ideas__container {
       width: 1170px;
-      height: 1120px;
-      padding-top: 222px; } }
+      min-height: 980px;
+      padding-top: 128px;
+      padding-bottom: 105px;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end; } }
 
 .ideas__title {
   margin: 0 auto;
@@ -944,10 +1013,11 @@ ul {
   text-align: center; }
   @media (min-width: 1170px) {
     .ideas__title {
+      margin-bottom: 30px;
       font-size: 48px;
       line-height: 60px;
       margin-right: 65px;
-      margin-left: auto; } }
+      text-align: right; } }
 
 @media (min-width: 1170px) {
   .scroll-pane {
@@ -955,7 +1025,7 @@ ul {
     margin-left: auto;
     margin-right: 25px;
     width: 685px;
-    height: 700px;
+    height: 570px;
     text-align: right;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -971,8 +1041,12 @@ ul {
     color: #f3f1f4;
     overflow-y: scroll; } }
 
-.jspContainer {
-  height: 700px; }
+.ideas__wrapper {
+  width: 320px;
+  margin: 0 auto; }
+  @media (min-width: 1170px) {
+    .ideas__wrapper {
+      width: 100%; } }
 
 .ideas__author {
   margin: 0 20px 0;
@@ -983,21 +1057,27 @@ ul {
   @media (min-width: 1170px) {
     .ideas__author {
       font-size: 24px;
-      line-height: 60px; } }
+      line-height: 30px;
+      margin-right: 30px;
+      margin-bottom: 5px; } }
 
 .ideas__text {
   margin: 0 20px 20px;
   font-size: 12px;
   line-height: 16px;
-  font-weight: 700; }
+  font-weight: 700;
+  height: 140px;
+  overflow-y: hidden; }
   @media (min-width: 1170px) {
     .ideas__text {
       font-size: 18px;
-      line-height: 24px; } }
+      line-height: 24px;
+      height: auto;
+      margin-right: 30px; } }
 
 .ideas__slide {
   display: none;
-  height: 230px;
+  min-height: 200px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -1015,9 +1095,14 @@ ul {
     display: flex; }
   @media (min-width: 1170px) {
     .ideas__slide--desktop {
+      margin-bottom: 20px;
+      min-height: auto;
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; } }
+      display: flex;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end; } }
 
 .ideas__btn {
   display: block;
@@ -1040,11 +1125,13 @@ ul {
       display: none; } }
 
 .ideas__btn--prev {
-  left: 0;
+  left: 40px;
+  top: 27%;
   background-image: url("../images/left-arrow-red.svg"); }
 
 .ideas__btn--next {
-  right: 0;
+  right: 40px;
+  top: 27%;
   background-image: url("../images/right-arrow-red.svg"); }
 
 .ideas__link {
@@ -1065,6 +1152,13 @@ ul {
     background-color: #f3f1f4; }
   .ideas__link:active {
     opacity: 0.6; }
+  @media (min-width: 1170px) {
+    .ideas__link {
+      width: 290px;
+      margin-right: 70px;
+      padding-top: 16px;
+      min-height: 70px;
+      font-size: 24px; } }
 
 .team {
   width: 100%;
@@ -1074,6 +1168,7 @@ ul {
   @media (min-width: 1170px) {
     .team {
       min-height: 500px;
+      padding-top: 75px;
       padding-bottom: 70px; } }
 
 .team__container {
@@ -1101,6 +1196,14 @@ ul {
       font-size: 48px;
       line-height: 60px; } }
 
+.swiper-container--3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
 .swiper-slide--member {
   max-width: 194px;
   margin-left: 43px;
@@ -1122,7 +1225,12 @@ ul {
     background-color: rgba(0, 0, 0, 0.6); }
   @media (min-width: 1170px) {
     .swiper-slide--member {
-      max-width: 264px; } }
+      max-width: 392px;
+      padding-top: 30px;
+      padding-left: 65px;
+      padding-right: 65px;
+      margin-left: 0;
+      margin-right: 0; } }
 
 .team__name {
   margin: 10px 0 0;
@@ -1131,6 +1239,7 @@ ul {
   color: #282828; }
   @media (min-width: 1170px) {
     .team__name {
+      margin-top: 15px;
       font-size: 26px; } }
 
 .team__post {
@@ -1140,6 +1249,7 @@ ul {
   color: #282828; }
   @media (min-width: 1170px) {
     .team__post {
+      margin-top: 4px;
       font-size: 18px; } }
 
 .swiper-button-prev--3,
@@ -1151,6 +1261,10 @@ ul {
   .swiper-button-prev--3:hover,
   .swiper-button-next--3:hover {
     opacity: 0.5; }
+  @media (min-width: 1170px) {
+    .swiper-button-prev--3,
+    .swiper-button-next--3 {
+      top: 47.5%; } }
 
 .swiper-button-next--3 {
   right: 0;
@@ -1160,7 +1274,7 @@ ul {
   left: 0;
   background-image: url("../images/left-arrow.svg"); }
 
-team__photo {
+.team__photo {
   display: block;
   position: relative;
   border-radius: 50%; }
@@ -1181,9 +1295,11 @@ team__photo {
   left: 0; }
   @media (min-width: 1170px) {
     .team__social {
-      width: 264px;
-      height: 264px;
-      padding: 20px; } }
+      width: 262px;
+      height: 262px;
+      padding: 20px;
+      top: 30px;
+      left: 65px; } }
 
 .social__link:hover {
   opacity: 0.6; }
@@ -1332,6 +1448,10 @@ team__photo {
   height: 235px;
   -ms-flex-item-align: center;
       align-self: center; }
+  @media (min-width: 1170px) {
+    .result__photo {
+      width: 585px;
+      height: 467px; } }
 
 .result__description {
   width: 290px;
@@ -1344,7 +1464,9 @@ team__photo {
     .result__description {
       width: 585px;
       height: 467px;
-      padding: 60px 100px; } }
+      padding: 60px 100px;
+      background-color: #000000;
+      color: #f3f1f4; } }
 
 .result__name {
   margin: 13px 0 0;
@@ -1364,9 +1486,11 @@ team__photo {
   text-align: center; }
   @media (min-width: 1170px) {
     .result__text {
+      max-height: 268px;
       font-size: 18px;
       margin: 12px 0 24px;
-      text-align: left; } }
+      text-align: left;
+      overflow-y: hidden; } }
 
 .result__link {
   display: block;
@@ -1384,7 +1508,8 @@ team__photo {
   @media (min-width: 1170px) {
     .result__link {
       font-weight: 300;
-      color: #f3f1f4; } }
+      color: #f3f1f4;
+      text-align: left; } }
 
 .swiper-button-next--4,
 .swiper-button-prev--4 {
@@ -1415,8 +1540,8 @@ team__photo {
   background-position: top; }
   @media (min-width: 1170px) {
     .contacts {
-      min-height: 1223px;
-      margin-top: -153px; } }
+      min-height: 1200px;
+      margin-top: 0; } }
 
 .contacts__container {
   width: 320px;
@@ -1438,7 +1563,7 @@ team__photo {
   @media (min-width: 1170px) {
     .contacts__container {
       width: 1170px;
-      padding-top: 266px;
+      padding-top: 113px;
       padding-bottom: 90px; } }
 
 .contacts__title {
@@ -1482,7 +1607,7 @@ team__photo {
       font-size: 24px;
       font-weight: 700; }
       .contacts__data--email {
-        margin-bottom: 65px; }
+        margin-bottom: 60px; }
       .contacts__data--social {
         font-size: 30px; } }
 
@@ -1507,7 +1632,7 @@ team__photo {
   margin-bottom: 38px; }
   @media (min-width: 1170px) {
     .form {
-      margin-bottom: 45px;
+      margin-bottom: 75px;
       width: 555px;
       padding: 39px 15px 0; } }
 
