--- a/sass/ideas.scss
+++ b/sass/ideas.scss
@@ -1,17 +1,17 @@
 .ideas {
   width: 100%;
-  margin-top: -35px;
+  margin: 0;
   background-image: url('../images/bg_content2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: top right;
+  background-position: top;
 }
 
 .ideas__container {
   width: $panel-width;
-  height: 495px;
+  height: 406px;
   margin: 0 auto;
-  padding: 120px 15px 50px 15px;
+  padding: 60px 15px 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,8 +19,10 @@
 
   @media (min-width: $desktop-width) {
     width: $desktop-width;
-    height: 1120px;
-    padding-top: 222px;
+    min-height: 980px;
+    padding-top: 128px;
+    padding-bottom: 105px;
+    align-items: flex-end;
   }
 }
 
@@ -34,10 +36,11 @@
   text-align: center;
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 30px;
     font-size: 48px;
     line-height: 60px;
     margin-right: 65px;
-    margin-left: auto;
+    text-align: right;
   }
 }
 
@@ -47,7 +50,7 @@
     margin-left: auto;
     margin-right: 25px;
     width: 685px;
-    height: 700px;
+    height: 570px;
     text-align: right;
     display: flex;
     flex-direction: column;
@@ -58,8 +61,13 @@
   }
 }
 
-.jspContainer {
-  height: 700px;
+.ideas__wrapper {
+  width: 320px;
+  margin: 0 auto;
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
 }
 
 .ideas__author {
@@ -71,7 +79,9 @@
 
   @media (min-width: $desktop-width) {
     font-size: 24px;
-    line-height: 60px;
+    line-height: 30px;
+    margin-right: 30px;
+    margin-bottom: 5px;
   }
 }
 
@@ -80,16 +90,20 @@
   font-size: 12px;
   line-height: 16px;
   font-weight: 700;
+  height: 140px;
+  overflow-y: hidden;
 
   @media (min-width: $desktop-width) {
     font-size: 18px;
     line-height: 24px;
+    height: auto;
+    margin-right: 30px;
   }
 }
 
 .ideas__slide {
   display: none;
-  height: 230px;
+  min-height: 200px;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -101,7 +115,10 @@
 
   @media (min-width: $desktop-width) {
     &--desktop {
+      margin-bottom: 20px;
+      min-height: auto;
       display: flex;
+      align-items: flex-end;
     }
   }
 }
@@ -135,12 +152,14 @@
 }
 
 .ideas__btn--prev {
-  left: 0;
+  left: 40px;
+  top: 27%;
   background-image: url('../images/left-arrow-red.svg');
 }
 
 .ideas__btn--next {
-  right: 0;
+  right: 40px;
+  top: 27%;
   background-image: url('../images/right-arrow-red.svg');
 }
 
@@ -165,5 +184,13 @@
 
   &:active {
     opacity: 0.6;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 290px;
+    margin-right: 70px;
+    padding-top: 16px;
+    min-height: 70px;
+    font-size: 24px;
   }
 }
